--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -67,7 +67,7 @@
           </li>
 
           <li class="navbar-item">
-            <a href="#" class="navbar-link" data-nav-link>Contact</a>
+            <a href="#add" class="navbar-link" data-nav-link>Contact</a>
           </li>
 
         </ul>
@@ -313,8 +313,8 @@
             <li>
               <div class="course-card">
 
-                <figure class="card-banner img-holder" style="--width: 970; --height: 920;">
-                  <img src="https://d3mxt5v3yxgcsr.cloudfront.net/courses/7413/course_7413_image.png" width="970" height="920" 
+                <figure class="card-banner img-holder">
+                  <img src="https://d3mxt5v3yxgcsr.cloudfront.net/courses/7413/course_7413_image.png" width="370" height="220" 
                     alt="Build Responsive Real- World Websites with HTML and CSS" class="img-cover">
                 </figure>
 
@@ -550,9 +550,6 @@
 
 
 
-      <!-- 
-        - #BLOG
-      -->
 
       <section class="section blog has-bg-image" id="blog" aria-label="blog"
         style="background-image: url('./assets/images/blog-bg.svg')">
